# EDA_final

Version_CPP/bookshelf_parser/: CMakeLists.txt  Makefile  README.md
Version_CPP/bookshelf_parser/include/: BookShelfParsers.hpp
Version_CPP/bookshelf_parser/src/: BookShelfParsers.cpp  main.cpp
Version_Python/task2/: README.md
Version_Python/task4/Program/: initial_placement.py  initial_placement_fixed.py  initial_placement_simple.py
task2/program/: bookshelf_parser.py  run_example.py
task3/: bookshelf_parser.py
task4/: 初始布局程序说明.md
